# hairby-ms-stephanie

./: .env  index.html  package-lock.json  package.json
backend/: pyproject.toml
backend/app/: main.py
src/: App.tsx
