[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Hair by Ms. Stephanie <stephanie@hairbymsstephanie.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.2"}
psycopg = {extras = ["binary"], version = "^3.2.10"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
